# Swarm

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
nano_swarm/: cli.py  config.py  llm_client.py
nano_swarm/jury/: orchestrator.py
nano_swarm/pipeline/: orchestrator.py
nano_swarm/re_nano/: curriculum.py  orchestrator.py  pattern_extractor.py  sandbox_validator.py  schemas.py  seed_ingestion.py  self_education.py  variation_generator.py
nano_swarm/specialist_nanos/: access_control.py  base.py  reentrancy_master.py
nano_swarm/tools/: cost_accounting.py
nano_swarm/triage/: invalidation_library.py  nano.py
seeds/: exploit_seed_compiler.py  exploit_seeds.json
tests/: test_pipeline.py
