[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nano-swarm"
version = "1.0.0"
description = "Self-educating blockchain security auditing system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "requests>=2.31",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "rich>=13.7",           # terminal output
    "typer>=0.9",           # CLI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
swarm = "nano_swarm.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
